# goit-pythonweb-hw-12

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  render.yaml  start.sh
alembic/: env.py
alembic/versions/: 0001_initial_contacts.py  0002_add_users_and_contact_owner.py  0003_add_user_role.py
app/: crud.py  db.py  deps.py  main.py  models.py  schemas.py
app/core/: config.py  security.py
app/routers/: __init__.py  auth.py  contacts.py  users.py
app/services/: __init__.py  cache.py  cloud.py  email.py  password_reset.py
docs/: Makefile  api.rst  conf.py  index.rst
tests/: conftest.py  test_auth.py  test_cache_current_user.py  test_contacts_authz.py  test_password_reset.py  test_roles_avatar.py  test_smoke.py
